src/styles/CodeBlock.module.scss
@use 'stylekit/index.module.scss' as stylekit;

.code-block {

	code {
		font-size: unset;
    font-weight: unset;
    background-color: unset;
		padding: unset;
	}

	background-color: #282a36 !important;
	filter: stylekit.$color--shadow-dark;
	border-radius: stylekit.$border-radius;

	&--margin-up {
		margin-top: stylekit.space(1);
	}

	&--margin-down {
		margin-bottom: stylekit.space(2);
	}

	&__wrapper {
		padding-bottom: stylekit.space(2);
		font-family: stylekit.$font-family--code;
		white-space: pre-wrap;

		overflow-x: auto;

		padding: stylekit.rem(18);
    padding-top: 0px;
		padding-left: 0px;

		width: calc(100% - #{stylekit.space(4)});
		tab-size: 2;

		> pre {
			margin: 0;
			padding: 0 !important;
			overflow-y: hidden;
			width: 100%;

			> code,
			> code > * {
				font-family: stylekit.$font-family--code;
				font-size: stylekit.$font-size--p-small;
				font-weight: unset;
				font-style: unset;
				line-height: stylekit.$line-height--normal;
				color: unset;
			}
		}
	}

  &__header {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    padding: stylekit.rem(4) stylekit.rem(18);
    padding-right: stylekit.space(0);

    &__title {
      font-size: stylekit.$font-size--small;
      color: stylekit.$color--code;
      text-transform: capitalize;
    }

    &__copy {
      height: stylekit.rem(32);
      width: stylekit.rem(32);
      background-image: url('../assets/copy.svg');
      background-size: stylekit.rem(14) stylekit.rem(14);
      background-position: center;
      background-repeat: no-repeat;
      cursor: pointer;
      transition: all 0.2s ease-in-out;

      &:hover {
        background-color: stylekit.$color--grey-dark;
        border-radius: 100%;
      }

      &--active {
        background-image: url('../assets/done_copying.svg');
        pointer-events: none;
      }
    }
  }
}

.margin-top--1 {
  margin-top: stylekit.space(1);
}

.margin-bottom--2 {
  margin-bottom: stylekit.space(2);
}

